Modifications on html and css files
-changed text in html
-changed h1 color in css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
     </head>
     <body>
-        <h1>Un titre de niveau 1</h1>
+        <h1>Ceci est mon véritable titre de niveau 1</h1>
         
         <p>
             Un premier petit paragraphe.
